# bioshake

./: README.md
driver/: README.md  pyproject.toml
driver/src/bioshake_driver/: __init__.py  bioshake.py  enums.py  serial.py
driver/tests/: bioshake.ipynb
edge/: .env.example  Dockerfile  compose.yml  main.py  pyproject.toml
